# Drain3

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  Pipfile  README.md  deploy_new_ver.sh  mask_conf.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: CI.yaml  app.yaml  python_310.yaml  python_36.yaml  python_38.yaml  python_39.yaml
drain3/: __init__.py  app_config.py  drain.py  drain3_core.py  drain3_main.py  file_persist_utils.py  file_persistence.py  jaccard_drain.py  kafka_persistence.py  kafka_utils.py  masking.py  memory_buffer_persistence.py  persistence_handler.py  redis_persistence.py  simple_profiler.py  template_miner.py  template_miner_config.py
examples/: drain3.ini  drain3_online.py  drain_bigfile_demo.py  drain_bigfile_demo3.py  drain_stdin_demo.py  example_drain_online_with_file_persist.py  example_drain_online_with_kafka_persist.py
src/: app_config.py  drain3_main.py  kafka_utils.py  masking.py
tests/: drain3_test.ini  drain_test.py  test_drain.py  test_jaccard_drain.py  test_masking.py  test_template_miner.py
